@@ -35,7 +35,6 @@ unless defined?(ActiveSupport)
 end
 
 require 'active_resource/base'
-require 'active_resource/struct'
 require 'active_resource/validations'
 require 'active_resource/custom_methods'
 
